--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<nav>
+  <a routerLink="/">Accueil</a>
+  <a routerLink="/veterinaire">Vetérinaires</a>
+</nav>
 <h1>{{title}} app is running</h1>
 
 <router-outlet></router-outlet>
